--- a/src/utility.css
+++ b/src/utility.css
@@ -28,6 +28,10 @@ a {
 }
 
 /* Margin Top */
+.mt-auto {
+    margin-top: auto;
+}
+
 .mt-0 {
     margin-top: 0 !important;
 }
@@ -53,6 +57,10 @@ a {
 }
 
 /* Margin Right */
+.mr-right {
+    margin-right: auto;
+}
+
 .mr-0 {
     margin-right: 0 !important;
 }
@@ -78,6 +86,10 @@ a {
 }
 
 /* Margin Bottom */
+.mb-auto {
+    margin-bottom: auto;
+}
+
 .mb-0 {
     margin-bottom: 0 !important;
 }
@@ -103,6 +115,10 @@ a {
 }
 
 /* Margin Left */
+.ml-auto {
+    margin-left: auto;
+}
+
 .ml-0 {
     margin-left: 0 !important;
 }
@@ -353,6 +369,11 @@ a {
 }
 
 .px-5 {
+    padding-left: 2.5rem !important;
+    padding-right: 2.5rem !important;
+}
+
+.px-6 {
     padding-left: 3rem !important;
     padding-right: 3rem !important;
 }
@@ -384,8 +405,14 @@ a {
 }
 
 .py-5 {
+    padding-top: 2.5rem !important;
+    padding-bottom: 2.5rem !important;
+}
+
+.py-6 {
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
+
 }
 
 
@@ -551,8 +578,62 @@ a {
     border: 1px solid #dee2e6 !important;
 }
 
+/* Border Colors */
+.border-primary {
+    border-color: #007bff !important;
+}
+
+.border-secondary {
+    border-color: #6c757d !important;
+}
+
+.border-success {
+    border-color: #28a745 !important;
+}
+
+.border-danger {
+    border-color: #dc3545 !important;
+}
+
+.border-warning {
+    border-color: #ffc107 !important;
+}
+
+.border-info {
+    border-color: #17a2b8 !important;
+}
+
+.border-light {
+    border-color: #f8f9fa !important;
+}
+
+.border-dark {
+    border-color: #343a40 !important;
+}
+
+/* Border Widths */
 .border-0 {
-    border: 0 !important;
+    border-width: 0 !important;
+}
+
+.border-1 {
+    border-width: 1px !important;
+}
+
+.border-2 {
+    border-width: 2px !important;
+}
+
+.border-3 {
+    border-width: 3px !important;
+}
+
+.border-4 {
+    border-width: 4px !important;
+}
+
+.border-5 {
+    border-width: 5px !important;
 }
 
 .border-top {
@@ -773,6 +854,10 @@ a {
 }
 
 .gap-5 {
+    gap: 2rem
+}
+
+.gap-6 {
     gap: 3rem !important;
 }
 
@@ -971,8 +1056,6 @@ a {
 /* Container */
 .container {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
