--- a/src/Components/HomePage/HeroSection/Carousel.css
+++ b/src/Components/HomePage/HeroSection/Carousel.css
@@ -1,5 +1,5 @@
 .carousel {
-    min-height: 100vh;
+    height: 100vh;
     position: relative;
 }
 
@@ -27,7 +27,10 @@
     height: 85vh;
     width: 45vw;
     bottom: 0;
+}
 
+.image-container img {
+    max-width: 400px;
 }
 
 .selected {
