--- a/src/utility.css
+++ b/src/utility.css
@@ -1106,6 +1106,10 @@ a {
     opacity: 0.4 !important;
 }
 
+.opacity-05 {
+    opacity: 0.5 !important;
+}
+
 .opacity-06 {
     opacity: 0.6 !important;
 }
