--- a/src/Components/HomePage/ImageContent/SectionContainer.css
+++ b/src/Components/HomePage/ImageContent/SectionContainer.css
@@ -1,12 +1,46 @@
 .asian-lady-container>.img-container {
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
     flex-grow: 1;
-    min-height: 300px;
-    height: 40%;
+    max-height: 682px;
     width: 50%;
-    min-width: 300px;
+    overflow: hidden;
+}
+
+.asian-lady-container>.img-container img {
+    width: 725px;
+    height: 774px;
+    object-fit: cover;
+    object-position: -342px -86px;
+}
+
+
+@media screen and (max-width: 500px) {
+
+    .asian-lady-container>.img-container img {
+        width: 300px;
+        height: 240px;
+        object-fit: cover;
+        object-position: -70px 0px;
+    }
+
+    .asian-lady-container>.img-container {
+        min-height: 300px;
+        min-width: 240px;
+    }
+
+}
+
+@media screen and (max-width: 786px) and (min-width: 501px) {
+    .asian-lady-container>.img-container img {
+        width: 463px;
+        height: 403px;
+        object-fit: cover;
+        object-position: -125px 0px;
+    }
+
+    .asian-lady-container>.img-container {
+        min-height: 463px;
+        min-width: 403px;
+    }
 }
 
 .contentContainer {
