--- a/src/Components/HomePage/Posts/Post.css
+++ b/src/Components/HomePage/Posts/Post.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
+
 .post-content {
     padding: 0.875rem;
     display: grid;
@@ -21,5 +22,12 @@
 @media (max-width: 768px) {
     .postGrid {
         flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 350px) {
+    .post {
+        min-width: 200px;
+        width: 280px;
     }
 }
