--- a/src/utility.css
+++ b/src/utility.css
@@ -241,7 +241,8 @@ a {
 .p-5 {
     padding: 3rem !important;
 }
-.p-6{
+
+.p-6 {
     padding: 4rem !important;
 }
 
@@ -741,6 +742,10 @@ a {
 
 .justify-content-evenly {
     justify-content: space-evenly !important;
+}
+
+.justify-content-stretch {
+    justify-content: stretch !important;
 }
 
 .justify-self-auto {
