Made AboutUS and Contact US Pages | Made Some Tweaks in Product Details Page | Added Cart Context and CRUD Functions also implemented it in product details and navbar

--- a/src/Components/ProductDetailsPage/AdditionalInformationSection.css
+++ b/src/Components/ProductDetailsPage/AdditionalInformationSection.css
@@ -29,6 +29,10 @@
         grid-template-columns: 1fr;
     }
 
+    .additional-info-1 {
+        margin: 2rem;
+    }
+
     .additional-info-2 {
         grid-column: auto;
         flex-direction: column;
