Implemented a central Product Data Structure for Product card and Product Details Page and implemented dynamic data for each product in this commit the data is less, there will be more products

--- a/src/Components/ProductDetailsPage/ProductCard.css
+++ b/src/Components/ProductDetailsPage/ProductCard.css
@@ -2,3 +2,7 @@
     min-height: 0px !important;
     max-height: 400px !important;
 }
+
+.prod-det-card>.model-photo {
+    background-size: 100% 100%;
+}
