--- a/src/Components/ProductDetailsPage/BestsellerProductsSection.css
+++ b/src/Components/ProductDetailsPage/BestsellerProductsSection.css
@@ -1,4 +1,4 @@
-.bestseller-grid {
+.prod-cont {
     display: grid;
     gap: 2rem;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -11,13 +11,13 @@
 }
 
 @media screen and (max-width: 1100px) and (min-width: 601px) {
-    .bestseller-grid {
-        grid-template-columns: 1fr 1fr;
+    .prod-cont {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
 @media screen and (max-width: 600px) {
-    .bestseller-grid {
+    .prod-cont {
         grid-template-columns: 1fr;
     }
 }
