--- a/src/Components/ProductPage/BottomSection/Pagination.css
+++ b/src/Components/ProductPage/BottomSection/Pagination.css
@@ -8,6 +8,23 @@
     outline: 1.5px solid #ccc;
 }
 
+.display-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+@media screen and (max-width: 1100px) and (min-width: 601px) {
+    .display-grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .display-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
 .number-items:not(:first-child) {
     border-left: none;
     /* Remove left border */
