--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -23,8 +23,10 @@
     width: 150px;
     height: auto;
     aspect-ratio: 4/3;
-    background-color: grey;
+    /* background-color: grey; */
     position: relative;
+    /* background-image: ; */
+    background-size: 100% 100%;
 }
 
 .product-head {
