--- a/src/Components/HomePage/BestSeller/ProductCard.css
+++ b/src/Components/HomePage/BestSeller/ProductCard.css
@@ -1,6 +1,6 @@
 .card {
 
-    min-height: 615px;
+    max-height: 600px;
     display: grid;
     grid-template-rows: 10fr 1fr 1fr 1fr;
     grid-row-gap: 10px;
@@ -10,13 +10,17 @@
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
+    max-width: 250px;
 }
+
+
 
 .model-photo {
     background-position: center center;
     background-size: cover;
     width: 100%;
     height: 100%;
+    /* aspect-ratio: 9/16; */
 }
 
 .circle-btn-border {
@@ -33,7 +37,13 @@
     font-size: 0.87rem;
     color: black;
     opacity: 0.7;
-    padding: 10px;
+    height: 37px;
+    width: 100%;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
 }
 
 .price {
@@ -84,3 +94,4 @@
     align-self: center;
     justify-self: center;
 }
+
