--- a/src/Components/HomePage/ImageContent/SectionContainer.css
+++ b/src/Components/HomePage/ImageContent/SectionContainer.css
@@ -1,4 +1,4 @@
-.asian-lady-container>.img-container {
+/* .asian-lady-container>.img-container {
     flex-grow: 1;
     max-height: 682px;
     width: 50%;
@@ -43,7 +43,27 @@
     }
 }
 
+ */
+@media screen and (max-width: 1000px) {
+    .img-container {
+        aspect-ratio: 9/16 !important;
+
+    }
+}
+
 .contentContainer {
     padding: 3rem;
-    flex-grow: 1;
+}
+
+.img-container {
+    width: 70vw;
+    aspect-ratio: 4/3;
+}
+
+.img-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top center;
+
 }
