--- a/src/Components/ProductDetailsPage/BestsellerProductsSection.css
+++ b/src/Components/ProductDetailsPage/BestsellerProductsSection.css
@@ -10,9 +10,15 @@
     flex-grow: 2;
 }
 
-@media screen and (max-width: 1100px) and (min-width: 601px) {
+@media screen and (max-width: 1100px) and (min-width: 800px) {
     .prod-cont {
         grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 801px) and (min-width: 599px) {
+    .prod-cont {
+        grid-template-columns: 1fr 1fr;
     }
 }
 
