--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -19,6 +19,10 @@
     align-items: center
 }
 
+.empty-cart>img {
+    max-width: 400px;
+}
+
 .cart-product-image {
     width: 150px;
     height: auto;
