--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@ body {
   user-select: none;
 }
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 a {
   color: black
 }
